# naukri-ai-autoapply

./: .dockerignore  .env.example  .gitignore  CODE_REVIEW.md  Dockerfile  Makefile  README.md  SECURITY.md  config.yaml  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  resume.pdf.enc  resume_profile.json.enc  session.enc  sonar-project.properties  sync_session.py  update_resume.py
backend/: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  __init__.py  config.yaml  dependencies.py  loop.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_api.ps1  session.enc
backend/routes/: applications.py  config.py  health.py  jobs.py  runs.py
backend/schemas/: events.py  job.py  run.py
backend/scripts/: decrypt_secrets.py  update_resume.py
backend/services/: event_bus.py  run_manager.py
backend/src/: __init__.py
backend/src/naukri_agent/: main.py
backend/src/naukri_agent/ai/: question_answerer.py
backend/src/naukri_agent/browser/: apply.py  interactions.py  login.py  profile.py  search.py
backend/src/naukri_agent/browser/pages/: detail.py  search.py
backend/src/naukri_agent/config/: constants.py  settings.py
backend/src/naukri_agent/core/: interfaces.py  progress.py
backend/src/naukri_agent/core/domain/: entities.py  specifications.py
backend/src/naukri_agent/database/: __init__.py  repository.py
backend/src/naukri_agent/orchestrator/: agent.py  factory.py
backend/src/naukri_agent/utils/: company_legitimacy.py  filters.py  helpers.py  job_metadata.py  secrets.py  telemetry.py
backend/tests/: test_agent_fallback.py  test_backup.py  test_big_company_filter.py  test_company_legitimacy.py  test_database.py  test_employer_metadata.py  test_event_bus.py  test_gmail_otp.py  test_job_quality.py  test_resume_parser.py  test_retry.py  test_routes.py  test_run_manager.py  test_secrets.py  test_specifications.py
debug_artifacts/: failure_edit_icon_click.html
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
scripts/: __init__.py  (+3 more)
(+140 files in other folders)
